testing baseline model

--- a/test_trained_model.ipynb
+++ b/test_trained_model.ipynb
@@ -349,6 +349,48 @@
    "source": [
     "print(chat(\"Business description: just random gibberish — asdjklqwopzxc.\", model, tokenizer))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f855e1bc-006a-438f-b54d-009740e4b3c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "system\n",
+      "\n",
+      "You are a domain name generator. \n",
+      "                       Your sole purpose is to generate creative, brandable, and available-sounding domain names based on user input.user\n",
+      "\n",
+      "A lifestyle media platform that explores the theme of ‘after-dark entertainment’ with a bold, edgy brand identity.\n",
+      "\n",
+      "['MidnightMuseMedia.com', 'EdgyStyleMedia.co', 'AfterNightLifestyle.news']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chat(\"A lifestyle media platform that explores the theme of ‘after-dark entertainment’ with a bold, edgy brand identity.\", model, tokenizer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "579eb24d-ad67-4293-861e-b4abf4088c69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(chat(\"A lifestyle media platform that explores the theme of ‘after-dark entertainment’ with a bold, edgy brand identity.\", model, tokenizer))"
+   ]
   }
  ],
  "metadata": {
